--- a/css/_main.scss
+++ b/css/_main.scss
@@ -52,7 +52,7 @@
 }
 
 .content-text-partner {
-	.row {
+	.row { 
 		margin: 0 -25px;
 		>div {
 			padding: 0 25px;
@@ -160,4 +160,108 @@
 		    padding-top: 4px;
     	}
     }
+}
+
+.box-banner-bread {
+	position: relative;
+	padding: 125px 0;
+	background: url('../images/banner-bread.png') no-repeat center;
+	background-size: cover;
+	color: #fff;
+	h1 {
+		font-weight: bold;
+		font-size: 48px;
+		span {
+			color: #00c9cb;
+		}
+	}
+}
+
+.box-content-how {
+	// .container {
+	// 	max-width: 1120px;
+	// }
+}
+.item-how {
+	display: flex;
+    margin-bottom: 90px;
+    .avarta {
+    	margin-right: 80px;
+    	flex: 0 0 470px;
+    	max-width: 470px;
+    }
+    .info {
+    	h3 {
+    		font-size: 40px;
+		    font-weight: bold;
+		    margin-bottom: 25px;
+    	}
+    	.desc {
+    		p {
+    			margin-bottom: 20px;
+	    		&:last-child {
+	    			margin-bottom: 0;
+	    		}
+    		}
+    	}
+    }
+}
+.item-memb-how {
+	max-width: 925px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    .avr-mem {
+    	margin-right: 30px;
+    	flex: 0 0 190px;
+    }
+    .caption-mem {
+    	color: #d4d4d4;
+	    font-size: 37px;
+	    font-weight: bold;
+	    line-height: 1.4;
+	    margin-bottom: 8px;
+    }
+}
+.item-recover-room {
+	padding: 100px 0;
+	&:nth-child(2n) {
+		background: #f4f4f4;
+		.item-how {
+			.avarta {
+				order: 2;
+				margin: 0 0 0 80px;
+			}
+			.info {
+				order: 1;
+			}
+		}
+	}
+}
+.bottom-howwork {
+	padding: 100px 0 160px 0;
+	text-align: center;
+	.desc-content {
+		font-size: 32px;
+		font-weight: bold;
+		max-width: 925px;
+		margin: 0 auto;
+		line-height: 1.3;
+		span {
+			background: #00fdff;
+		}
+	}
+	.btn-bott {
+		margin-top: 40px;
+		ul {
+			list-style: none;
+		    display: flex;
+		    margin: 0 -20px;
+		    justify-content: center;
+		    align-items: center;
+		    li {
+		    	padding: 0 20px;
+		    }
+		}
+	}
 }
