--- a/css/style.css
+++ b/css/style.css
@@ -377,4 +377,100 @@ footer ul {
   padding-top: 4px;
 }
 
+.box-banner-bread {
+  position: relative;
+  padding: 125px 0;
+  background: url("../images/banner-bread.png") no-repeat center;
+  background-size: cover;
+  color: #fff;
+}
+.box-banner-bread h1 {
+  font-weight: bold;
+  font-size: 48px;
+}
+.box-banner-bread h1 span {
+  color: #00c9cb;
+}
+
+.item-how {
+  display: flex;
+  margin-bottom: 90px;
+}
+.item-how .avarta {
+  margin-right: 80px;
+  flex: 0 0 470px;
+  max-width: 470px;
+}
+.item-how .info h3 {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 25px;
+}
+.item-how .info .desc p {
+  margin-bottom: 20px;
+}
+.item-how .info .desc p:last-child {
+  margin-bottom: 0;
+}
+
+.item-memb-how {
+  max-width: 925px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+}
+.item-memb-how .avr-mem {
+  margin-right: 30px;
+  flex: 0 0 190px;
+}
+.item-memb-how .caption-mem {
+  color: #d4d4d4;
+  font-size: 37px;
+  font-weight: bold;
+  line-height: 1.4;
+  margin-bottom: 8px;
+}
+
+.item-recover-room {
+  padding: 100px 0;
+}
+.item-recover-room:nth-child(2n) {
+  background: #f4f4f4;
+}
+.item-recover-room:nth-child(2n) .item-how .avarta {
+  order: 2;
+  margin: 0 0 0 80px;
+}
+.item-recover-room:nth-child(2n) .item-how .info {
+  order: 1;
+}
+
+.bottom-howwork {
+  padding: 100px 0 160px 0;
+  text-align: center;
+}
+.bottom-howwork .desc-content {
+  font-size: 32px;
+  font-weight: bold;
+  max-width: 925px;
+  margin: 0 auto;
+  line-height: 1.3;
+}
+.bottom-howwork .desc-content span {
+  background: #00fdff;
+}
+.bottom-howwork .btn-bott {
+  margin-top: 40px;
+}
+.bottom-howwork .btn-bott ul {
+  list-style: none;
+  display: flex;
+  margin: 0 -20px;
+  justify-content: center;
+  align-items: center;
+}
+.bottom-howwork .btn-bott ul li {
+  padding: 0 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
