--- a/css/_layer.scss
+++ b/css/_layer.scss
@@ -15,7 +15,10 @@ p {
 
 a { 
   text-decoration: none;
-  color: #333333;
+  color: #000000;
+  &:hover {
+    color: $lightblue;
+  }
   transition: .3s all !important;
 }
 
@@ -187,6 +190,6 @@ footer {
   h4 {
     font-weight: normal;
     font-size: 16px;
-    margin-top: 10px;
+    margin-top: 6px;
   }
 }
