--- a/css/_main.scss
+++ b/css/_main.scss
@@ -6,12 +6,18 @@
 		span {
 			color: $lightblue;
 		}
+		@media (max-width: 1250px) {
+			font-size: 36px;
+		}
 	}
 	.desc-title {
 		font-size: 20px;
 		font-weight: 500;
 		max-width: 790px;
 		margin: 15px auto 0 auto;
+		@media (max-width: 1250px) {
+			font-size: 16px;
+		}
 	}
 }
 
@@ -27,10 +33,45 @@
 	    border: 1px solid $lightblue;
 	    border-radius: 6px;
 	    color: #fff;
+	    img {
+	    	margin-right: 12px;
+	    }
 	    &:hover {
 	    	color: $lightblue;
 	    	background: #fff;
 	    }
+	}
+}
+.box-banner {
+	position: relative;
+	.content-banner-home {
+		background: url('../images/bn-banner.png') no-repeat center;
+		background-size: cover;
+		background-position: bottom;
+		padding: 80px 0 10px 0;
+    	text-align: right;
+	}
+}
+.info-banner {
+	position: relative;
+	color: #fff;
+	text-transform: uppercase;
+	h1 {
+		font-size: 60px;
+		font-weight: bold;
+		letter-spacing: -1px;
+		margin-bottom: 20px;
+		line-height: 1.1;
+	}
+	.txt-banner {
+		text-align: left;
+	    position: absolute;
+	    width: 27%;
+	    top: -20px;
+	}
+	.avr-banner {
+		width: 63%;
+    	margin-left: auto;
 	}
 }
 .box-recover {
@@ -48,6 +89,9 @@
 	    font-size: 24px;
 	    margin-top: 15px;
 	    color: $lightblue;
+	    @media (max-width: 1250px) {
+	    	font-size: 20px;
+	    }
 	}
 }
 
@@ -65,6 +109,9 @@
 	    font-weight: bold;
 	    line-height: 1.1;
 	    margin-bottom: 15px;
+	    @media (max-width: 1250px) {
+	    	font-size: 36px;	
+	    }
 	}
 }
 .caption-partner {
@@ -75,6 +122,9 @@
     max-width: 680px;
     margin: 0 auto;
     line-height: 1.3;
+    @media (max-width: 1250px) {
+    	font-size: 36px;
+    }
 }
 .slide-part {
 	margin: 0 -25px;
@@ -164,16 +214,47 @@
 
 .box-banner-bread {
 	position: relative;
-	padding: 125px 0;
+	padding: 120px 0 100px 0;
 	background: url('../images/banner-bread.png') no-repeat center;
 	background-size: cover;
 	color: #fff;
 	h1 {
 		font-weight: bold;
 		font-size: 48px;
+		@media (max-width: 1250px) {
+			font-size: 36px;
+		}
 		span {
 			color: #00c9cb;
 		}
+	}
+	&.bread-product {
+		padding: 100px 0 0 0;
+	}
+}
+
+.cate-prd {
+	padding: 30px 0 60px 0;
+	ul {
+		list-style: none;
+	    display: flex;
+	    margin: 0 -12px;
+	    justify-content: center;
+	    text-transform: uppercase;
+	    li {
+	    	padding: 0 12px;
+	    	a {
+	    		display: inline-block;
+	    		font-size: 33px;
+	    		font-weight: bold;
+	    		color: #fff;
+	    		border-bottom: 3px solid transparent;
+	    		&.active, &:hover {
+	    			color: #00fdff;
+	    			border-bottom: 3px solid #00fdff;
+	    		}
+	    	}
+	    }
 	}
 }
 
@@ -195,6 +276,9 @@
     		font-size: 40px;
 		    font-weight: bold;
 		    margin-bottom: 25px;
+		    @media (max-width: 1250px) {
+		    	font-size: 32px;
+		    }
     	}
     	.desc {
     		p {
@@ -221,10 +305,17 @@
 	    font-weight: bold;
 	    line-height: 1.4;
 	    margin-bottom: 8px;
+	    @media (max-width: 1250px) {
+	    	font-size: 32px;
+	    }
     }
 }
 .item-recover-room {
 	padding: 100px 0;
+	.container {
+		padding: 0;
+    	max-width: 1090px;
+	}
 	&:nth-child(2n) {
 		background: #f4f4f4;
 		.item-how {
@@ -263,5 +354,324 @@
 		    	padding: 0 20px;
 		    }
 		}
+	}
+}
+
+.box-sapo {
+	padding: 85px 0 50px 0;
+}
+.desc-sapo-who {
+	max-width: 1090px;
+	margin: 0 auto;
+	h3 {
+		margin-bottom: 25px;
+		font-size: 40px;
+		font-weight: bold;
+	}
+	p {
+		margin-bottom: 20px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+}
+.box-step {
+	background: #f4f4f4;
+	padding: 70px 0;
+	.btn-main {
+		padding-left: 65px;
+	}
+}
+.content-step {
+	max-width: 780px;
+    margin: 0 auto;
+}
+.list-step {
+	padding-left: 65px;
+	border-left: 3px solid #00c9cb;
+	position: relative;
+	margin-bottom: 35px;
+	&:after {
+		content: "";
+	    width: 48px;
+	    height: 23px;
+	    background: url(../images/arr-down.png) no-repeat;
+	    background-size: cover;
+	    position: absolute;
+	    bottom: -3px;
+	    left: -26px;
+	}
+	.item-step {
+		margin-bottom: 50px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		.title-step {
+			margin-bottom: 20px;
+		    font-size: 40px;
+		    font-weight: bold;
+		    line-height: 1.3;
+		}
+		p {
+			margin-bottom: 20px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+}
+.box-partner-who {
+	padding: 100px 0 50px 0;
+}
+
+.list-part-who {
+	max-width: 1000px;
+	margin: 0 auto;
+	.item-part-who {
+		margin-bottom: 60px;
+		display: flex;
+		justify-content: space-between;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		&:nth-child(2n) {
+			.avarta {
+				margin-right: 0;
+				order: 2;
+			}
+			.info {
+				padding-right: 80px;
+				order: 1;
+			}
+		}
+		.avarta {
+			flex: 0 0 394px;
+			margin-right: 80px;
+		}
+		h3 {
+			a {
+				font-size: 48px;
+				font-weight: bold;
+				display: block;
+				margin-bottom: 20px;
+				color: #000000;
+			}
+		}
+		.link-part {
+			margin-top: 10px;
+			a {
+				color: $lightblue;
+			}
+		}
+	}
+}
+
+.title-part-who {
+	margin-bottom: 80px;
+	h2 {
+		font-size: 40px;
+    	font-weight: bold;
+	}
+}
+
+.box-products {
+	padding: 120px 0;
+	.list-product {
+		max-width: 1200px;
+	}
+}
+.item-product {
+	margin-bottom: 100px;
+	display: flex;	
+	&:last-child {
+		margin-bottom: 0;
+	}
+	.avarta {
+		flex: 0 0 470px;
+    	margin-right: 30px;
+	}
+	.info {
+		display: flex;
+	    flex-direction: column;
+	    justify-content: space-between;
+		ul {
+			list-style: none;
+			display: flex;
+			align-items: center;
+			li {
+				margin-right: 30px;
+				&:last-child {
+					margin-right: 0;
+				}
+			}
+		}
+		.brand {
+			padding: 15px 0 20px 0;
+		}
+		h3 {
+			a {
+				font-size: 48px;
+				font-weight: bold;
+				display: inline-block;
+			}
+		}
+		.desc {
+			padding: 0 0 20px 0;
+		}
+	}
+}
+.box-slide-enkele {
+	padding: 60px 0;
+	background: #f4f4f4;
+	.title-slide-ek {
+		margin-bottom: 45px;
+		font-size: 32px;
+		font-weight: bold;
+		line-height: 1.4;
+	}
+}
+.item-enkele {
+	.icon {
+		background-image: -moz-linear-gradient( -63deg, rgb(0,255,234) 0%, rgb(0,204,255) 100%);
+	    background-image: -webkit-linear-gradient( -63deg, rgb(0,255,234) 0%, rgb(0,204,255) 100%);
+	    background-image: -ms-linear-gradient( -63deg, rgb(0,255,234) 0%, rgb(0,204,255) 100%);
+	    display: flex;
+	    align-items: center;
+	    justify-content: center;
+	    width: 100px;
+	    height: 100px;
+	    padding: 12px;
+	    border-radius: 100%;
+	    text-align: center;
+	    margin: 0 auto;
+	}
+	.info {
+		padding-top: 15px;
+		p {
+			margin-bottom: 8px;
+		}
+	}
+}
+.box-partner-prd {
+	padding: 150px 0;
+}
+
+.bread-contact {
+	padding: 150px 0 230px 0;
+	h1 {
+		font-size: 55px;
+		span {
+			display: block;
+		}
+	}
+}
+
+.box-form-contact {
+	position: relative;
+    margin-top: -7%;
+    .content-form {
+    	box-shadow: 0px 8px 55.25px 9.75px rgb(0 0 0 / 8%);
+	    max-width: 1015px;
+	    width: 100%;
+	    background: #fff;
+	    padding: 30px 50px;
+	    border-radius: 8px;
+	    margin: 0 auto;
+    }
+}
+.list-frm {
+	.item-frm {
+		margin-bottom: 40px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+		label {
+			font-size: 12px;
+			color: #9a9a9a;
+			text-transform: uppercase;
+		}
+		.txt_field {
+			width: 100%;
+		    height: 35px;
+		    outline: none;
+		    border: 0;
+		    border-bottom: 2px solid #6c6c6c;
+		    font-size: 20px;
+		    &:focus {
+		    	border-bottom: 2px solid $lightblue;
+		    }
+		    &::placeholder {
+		    	color: #b9b9b9;
+		    }
+		}
+		.btn_field {
+			height: 46px;
+		    width: 210px;
+		    font-weight: bold;
+		    border-radius: 6px;
+		    color: #fff;
+		    cursor: pointer;
+		    background: $lightblue;
+		    border: 1px solid $lightblue;
+		    &:hover {
+		    	color: $lightblue;
+		    	background: #fff;
+		    }
+		}
+	}
+} 
+
+.box-bookingtool {
+	padding: 100px 0;
+}
+.title-contact {
+	margin-bottom: 35px;
+	h2 {
+		font-size: 55px;
+		font-weight: bold;
+	}
+	span {
+		color: $lightblue;
+	}
+}
+.box-showroom {
+	padding: 0 0 80px  0;
+}
+.content-showroom {
+	margin: 0 auto;
+	max-width: 1015px;
+	width: 100%;
+}
+.list-showroom {
+	.row {
+		margin: 0 -8px;
+		>div {
+			padding: 0 8px;
+		}
+	}
+}
+.txt-showroom {
+	.desc {
+		padding: 45px 0 35px 0;
+	}
+	ul {
+		list-style: none;
+		display: flex;
+		justify-content: center;
+		li {
+			padding: 0 8px;
+			a {
+				width: 215px;
+				padding: 0 15px;
+				justify-content: center;
+			}
+		}
+	}
+}
+
+.box-tab-content {
+	display: none;
+	&.active {
+		display: block;
 	}
 }
