--- a/css/_layer.scss
+++ b/css/_layer.scss
@@ -34,6 +34,7 @@ input {
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
   &.open_menu {
     overflow: hidden;
   }
@@ -49,10 +50,19 @@ body {
   font-family: 'Poppins';
   background: #fff;
   letter-spacing: -0.25px;
+  @media (max-width: 767px) {
+    font-size: 14px;
+  }
 }
 .container {
   max-width: 1400px;
   padding: 0 50px;
+  @media (max-width: 1023px) {
+    padding: 0 40px;
+  }
+  @media (max-width: 767px) {
+    padding: 0 24px;
+  }
 }
 
 
@@ -148,17 +158,27 @@ time, mark, audio, video {
 footer {
   background: #0f111e;
   color: #fff;
+  @media (max-width: 1023px) {
+    font-size: 14px;
+  }
   ul {
     list-style: none;
   }
 }
 .fter-top {
   padding: 25px 0;
+  @media (max-width: 767px) {
+    text-align: center;
+  }
   .social {
     ul {
       display: flex;
       align-items: center;
       justify-content: flex-end;
+      @media (max-width: 767px) {
+        justify-content: center;
+        margin-top: 25px;
+      }
       li {
         margin-right: 32px;
         &:last-child {
@@ -170,13 +190,29 @@ footer {
 }
 .fter-bot {
   padding: 0 0 48px 0;
+  @media (max-width: 767px) {
+    padding: 0 0 25px 0;
+  }
   .info-fter {
     ul {
       display: flex;
+      @media (max-width: 767px) {
+        justify-content: space-between;
+        font-size: 11px;
+        margin-bottom: 25px;
+      }
       li {
         border-left: 4px solid #00f8fa;
         padding-left: 15px;
         margin-right: 140px;
+        @media (max-width: 1023px) {
+          margin-right: 32px;
+        }
+        @media (max-width: 767px) {
+          margin-right: 0;
+          border-left: 2px solid #00f8fa;
+          padding-left: 10px;
+        }
         &:last-child {
           margin-right: 0;
         }
@@ -187,9 +223,16 @@ footer {
 .copyright {
   text-align: right;
   font-size: 12px;
+  @media (max-width: 767px) {
+    font-size: 10px;
+    text-align: center;
+  }
   h4 {
     font-weight: normal;
     font-size: 16px;
     margin-top: 6px;
+    @media (max-width: 767px) {
+      font-size: 14px;
+    }
   }
 }
